objects/Candidate_Registration__c.object
<CustomObject>
    <fields>
        <fullName>Time_to_Decision__c</fullName>
        <formula>IF(NOT(ISBLANK(Time_When_Accepted_Or_Rejected__c)),

TEXT(
 FLOOR( Time_When_Accepted_Or_Rejected__c  -  CreatedDate )
)  &amp; &quot; Days &quot; &amp;
TEXT(
ROUND(MOD((Time_When_Accepted_Or_Rejected__c - CreatedDate)*24,24),0)
         )  &amp;&quot; Hours &quot; &amp;
TEXT(
ROUND(MOD((Time_When_Accepted_Or_Rejected__c - CreatedDate)*1440,60),0)
) &amp;&quot; Minutes &quot;

, &quot;&quot;)</formula>
        <label>Time to Decision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_to_In_Progress__c</fullName>
        <formula>IF(NOT(ISBLANK( Time_Moved_To_In_Progress__c )), 

TEXT( 
FLOOR( Time_Moved_To_In_Progress__c - CreatedDate ) 
) &amp; &quot; Days &quot; &amp; 
TEXT( 
ROUND(MOD((Time_Moved_To_In_Progress__c - CreatedDate)*24,24),0) 
) &amp;&quot; Hours &quot; &amp; 
TEXT( 
ROUND(MOD((Time_Moved_To_In_Progress__c - CreatedDate)*1440,60),0) 
) &amp;&quot; Minutes &quot; 

, &quot;&quot;)</formula>
        <label>Time to In Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Why_Candidate_was_Accepted__c</fullName>
        <label>Why was Candidate Accepted?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1st_Location_Preference_Pass_Reason__c</fullName>
        <label>1st Location Preference: Pass Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1st_Location_Preference_Pass__c</fullName>
        <label>1st Location Preference: Pass?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_Location_Preference__c</fullName>
        <label>1st Location Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>East Bay</fullName>
                </value>
                <value>
                    <fullName>Greater New York</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Philadelphia</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Silicon Valley</fullName>
                </value>
                <value>
                    <fullName>Washington D.C.</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2nd_Location_Preference_Pass_Reason__c</fullName>
        <label>2nd Location Preference: Pass Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X2nd_Location_Preference_Pass__c</fullName>
        <label>2nd Location Preference: Pass?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2nd_Location_Preference__c</fullName>
        <label>2nd Location Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>East Bay</fullName>
                </value>
                <value>
                    <fullName>Greater New York</fullName>
                </value>
                <value>
                    <fullName>Philadelphia</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Silicon Valley</fullName>
                </value>
                <value>
                    <fullName>Washington D.C.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3rd_Location_Preference_Pass__c</fullName>
        <label>3rd Location Preference: Pass?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3rd_Location_Preference__c</fullName>
        <label>3rd Location Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>East Bay</fullName>
                </value>
                <value>
                    <fullName>Greater New York</fullName>
                </value>
                <value>
                    <fullName>Philadelphia</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Silicon Valley</fullName>
                </value>
                <value>
                    <fullName>Washington D.C.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>utm_campaign__c</fullName>
        <label>utm campaign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>utm_content__c</fullName>
        <label>utm content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>utm_medium__c</fullName>
        <label>utm medium</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>utm_source__c</fullName>
        <label>utm source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>utm_term__c</fullName>
        <label>utm term</label>
        <type>TextArea</type>
    </fields>
    <label>Candidate Registration</label>
    <nameField>
        <displayFormat>REG-{000000}</displayFormat>
        <label>Candidate Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Accepted_Outcome</fullName>
        <active>true</active>
        <description>Ensure that the not right now or create SI checkbox is checked upon accepted.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Review_Status__c, &apos;Accepted&apos;),
Not_Right_Now__c = FALSE,
Create_Screening_Interview__c = FALSE,
Existing_Candidate__c = FALSE)</errorConditionFormula>
        <errorMessage>Please select whether this is an existing candidate, there is no job match or to create a screening interview before proceeding.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Accepted_Outcome_2</fullName>
        <active>true</active>
        <description>Ensure only one decision is made between NRN, create SI and existing candidate upon accepted.</description>
        <errorConditionFormula>AND(
 OR(
  Create_Screening_Interview__c = TRUE,
  Not_Right_Now__c = TRUE,
  Existing_Candidate__c = TRUE),
 OR(
  Create_Screening_Interview__c = TRUE,
  Not_Right_Now__c = TRUE,
  Existing_Candidate__c = FALSE),
 OR(
  Create_Screening_Interview__c = TRUE,
  Not_Right_Now__c = FALSE,
  Existing_Candidate__c = TRUE),
 OR(
  Create_Screening_Interview__c = FALSE,
  Not_Right_Now__c = TRUE,
  Existing_Candidate__c = TRUE))</errorConditionFormula>
        <errorMessage>Please only select one outcome between existing candidate, not right now, or create screening interview.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enforce_Passed_On_Fields_1</fullName>
        <active>false</active>
        <description>Make sure that if there is a value within any location preference field, that the passed on yes/no fields have values before a lead can be accepted.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Review_Status__c, &apos;Accepted&apos;),
!ISPICKVAL(X1st_Location_Preference__c, &apos;&apos;),
ISPICKVAL(X1st_Location_Preference_Pass__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>X1st_Location_Preference_Pass__c</errorDisplayField>
        <errorMessage>Please indicate whether this location preference was passed before accepting!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enforce_Passed_On_Fields_1_NRN</fullName>
        <active>true</active>
        <description>If there is a second loc pref listed, don&apos;t allow Accept - NRN to be selected if loc pref pass is null or no</description>
        <errorConditionFormula>AND(
ISPICKVAL(Review_Status__c, &apos;Accepted&apos;),
(Not_Right_Now__c = TRUE),
ISPICKVAL( NRN_Reason__c ,&apos;No current job matches&apos;),
!ISPICKVAL(X2nd_Location_Preference__c, &apos;&apos;),

(ISPICKVAL( X1st_Location_Preference_Pass__c , &apos;&apos;)|| ISPICKVAL( X1st_Location_Preference_Pass__c , &apos;No&apos;) ))</errorConditionFormula>
        <errorDisplayField>X1st_Location_Preference_Pass__c</errorDisplayField>
        <errorMessage>Please pass to the next location instead of selecting Not Right Now</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enforce_Passed_On_Fields_2</fullName>
        <active>false</active>
        <description>Make sure that if there is a value within any location preference field, that the passed on yes/no fields have values before a lead can be accepted.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Review_Status__c, &apos;Accepted&apos;),
!ISPICKVAL(X2nd_Location_Preference__c, &apos;&apos;),
ISPICKVAL(X2nd_Location_Preference_Pass__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>X2nd_Location_Preference_Pass__c</errorDisplayField>
        <errorMessage>Please indicate whether this location preference was passed before accepting!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enforce_Passed_On_Fields_2_NRN</fullName>
        <active>true</active>
        <description>If there is a third loc pref listed, don&apos;t allow Accept - NRN to be selected if loc pref pass is null or no</description>
        <errorConditionFormula>AND(
ISPICKVAL(Review_Status__c, &apos;Accepted&apos;),
(Not_Right_Now__c = TRUE),
ISPICKVAL( NRN_Reason__c ,&apos;No current job matches&apos;),
!ISPICKVAL(X3rd_Location_Preference__c, &apos;&apos;),

(ISPICKVAL( X2nd_Location_Preference_Pass__c , &apos;&apos;)|| ISPICKVAL( X2nd_Location_Preference_Pass__c , &apos;No&apos;) ))</errorConditionFormula>
        <errorDisplayField>X2nd_Location_Preference_Pass__c</errorDisplayField>
        <errorMessage>Please pass to the next location instead of selecting Not Right Now</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enforce_Passed_On_Fields_3</fullName>
        <active>false</active>
        <description>Make sure that if there is a value within any location preference field, that the passed on yes/no fields have values before a lead can be accepted.</description>
        <errorConditionFormula>AND( 
ISPICKVAL(Review_Status__c, &apos;Accepted&apos;), 
!ISPICKVAL(X3rd_Location_Preference__c, &apos;&apos;), 
ISPICKVAL(X3rd_Location_Preference_Pass__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>X3rd_Location_Preference_Pass__c</errorDisplayField>
        <errorMessage>Please indicate whether this location preference was passed before accepting!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enforce_Passed_On_Fields_TESTING</fullName>
        <active>false</active>
        <description>Make sure that if there is a value within any location preference field, that the passed on yes/no fields have values before a lead can be accepted.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Review_Status__c, &apos;Accepted&apos;),
(Not_Right_Now__c = TRUE),
!ISPICKVAL(X2nd_Location_Preference__c, &apos;&apos;),
ISPICKVAL( X1st_Location_Preference_Pass__c , &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>X2nd_Location_Preference_Pass__c</errorDisplayField>
        <errorMessage>Please indicate whether this location preference was passed before accepting!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NRN_Reason</fullName>
        <active>true</active>
        <description>Enforce that a NRN reason is selected if there are no job fits before accepting.</description>
        <errorConditionFormula>AND(
 Not_Right_Now__c = TRUE,
 ISPICKVAL(NRN_Reason__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>NRN_Reason__c</errorDisplayField>
        <errorMessage>Please select a reason why you can&apos;t work with the candidate at this time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Owned_by_Queue_Accept_Reject</fullName>
        <active>true</active>
        <description>Ensure that the record is not owned by a queue when the status reaches accept or reject</description>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(Review_Status__c, &apos;Accepted&apos;),
ISPICKVAL(Review_Status__c, &apos;Rejected&apos;)),
OR(
OwnerId = &apos;00G0v00000173GcEAI&apos;,
OwnerId = &apos;00G0v00000173GhEAI&apos;,
OwnerId = &apos;00G0v0000017d10EAA&apos;,
OwnerId = &apos;00G0v0000016ExJEAU&apos;,
OwnerId = &apos;00G0v0000017d0vEAA&apos;,
OwnerId = &apos;00G0v0000017d15EAA&apos;))</errorConditionFormula>
        <errorMessage>Please remove this record from the queue before accepting or rejecting the registration!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rejection_Reason</fullName>
        <active>true</active>
        <description>Require a rejection reason when review status is set to rejected</description>
        <errorConditionFormula>AND(
ISPICKVAL(Review_Status__c, &apos;Rejected&apos;),
ISPICKVAL(Rejection_Reason__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Rejection_Reason__c</errorDisplayField>
        <errorMessage>Please select a rejection reason to set review status to rejected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Source_Required_on_Candidate</fullName>
        <active>true</active>
        <description>Requires the candidate record has a source before the registration can be progressed from it&apos;s original stage.</description>
        <errorConditionFormula>AND( 
OR( 
ISPICKVAL(Review_Status__c, &apos;In Progress&apos;), 
ISPICKVAL(Review_Status__c, &apos;Rejected&apos;), 
ISPICKVAL(Review_Status__c, &apos;Accepted&apos;)), 
ISPICKVAL(Candidate__r.ts2__Source__c, &apos;&apos;))</errorConditionFormula>
        <errorMessage>Please enter a source on the candidate before editing the registration record.</errorMessage>
    </validationRules>
</CustomObject>